[package]
name = "cmd_lib"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI command schema library with builder and library controller"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0"
